working ui version

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@docker/docker-mui-theme": "^0.0.7",
     "@docker/extension-api-client": "^0.2.3",
