--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@docker/extension-api-client": "^0.2.3",
     "ethers": "^5.5.1",
     "vue": "^3.2.16",
     "vue-router": "^4.0.13"
