--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,6 @@ services:
     image: ${DESKTOP_PLUGIN_IMAGE}
     volumes:
       - /var/run/docker.sock.raw:/var/run/docker.sock
-#    cap_add:
-#      - DAC_OVERRIDE
-#      - FOWNER
+    cap_add:
+      - DAC_OVERRIDE
+      - FOWNER
